--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,5 +1,5 @@
 body {
-    font: 14px "Century Gothic", Futura, sans-serif;
+    font: 14px "Comic Sans", Futura, Comic Sans;
     margin: 20px;
   }
   
@@ -18,18 +18,18 @@ body {
   }
   
   .square {
-    background: #fff;
-    border: 1px solid #999;
+    background: rgb(103, 176, 222);
+    border: 1px solid rgb(255, 0, 0);
     float: left;
-    font-size: 24px;
+    font-size: 80px;
     font-weight: bold;
     line-height: 34px;
-    height: 34px;
+    height: 100px;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 34px;
+    width: 100px;
   }
   
   .square:focus {
@@ -48,4 +48,10 @@ body {
   .game-info {
     margin-left: 20px;
   }
+
+  .button {
+    font-weight: bold;
+  }
+
+
   
